Install script updated to address some of the instalation issues. config file updated to be in user's home folder.

--- a/machines.conf
+++ b/machines.conf
@@ -1,3 +1,5 @@
+#Create a copy of this file in your home folder as '.UpMachines.conf'
+# and use the format below to describe your machines:
 #Name Address Port WaitTime(s)
 
 #Example:
@@ -5,3 +7,5 @@
 # and wait for a response for 3 seconds.
 # Label and shows the machine as 'MyMachine'.
 #MyMachine myaddress.com 22 3
+
+
